Added color coded role/DAG suggestioned assigning. Can update user role and DAG on a specific project, or all projects.

--- a/css/styles.css
+++ b/css/styles.css
@@ -101,12 +101,16 @@ body {
 th {
     font-weight: bold !important;
     background-color: #1c94c4;
+	text-align: center !important;
 }
 td a {
     text-decoration: underline !important;
     font-size: 16px !important;
 }
 
+table.table td, table.table th {
+	text-align:center;
+}
 .dagHeader {
 	background-color:#CE8483;
 }
